; ModuleID = '/home/carl/AnghaBench/lz4/lib/extr_lz4.c_LZ4_decoderRingBufferSize.c'
source_filename = "/home/carl/AnghaBench/lz4/lib/extr_lz4.c_LZ4_decoderRingBufferSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LZ4_MAX_INPUT_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LZ4_decoderRingBufferSize(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @LZ4_MAX_INPUT_SIZE, align 4
  %10 = icmp sgt i32 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %19

12:                                               ; preds = %7
  %13 = load i32, i32* %3, align 4
  %14 = icmp slt i32 %13, 16
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 16, i32* %3, align 4
  br label %16

16:                                               ; preds = %15, %12
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @LZ4_DECODER_RING_BUFFER_SIZE(i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %16, %11, %6
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @LZ4_DECODER_RING_BUFFER_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
